--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9bec8e">  <td>23/08/08 21:10:16</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;DriverManager.closeEnv()[pri:0, instance:tests.WelcomePage@74d1dc36]">&lt;&lt;closeEnv</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="6f76f3">  <td>23/08/08 21:10:13</td>   <td>-3042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WelcomePage.checkWrongCredentials()[pri:0, instance:tests.WelcomePage@74d1dc36]">checkWrongCredentials</td> 
-  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="9bec8e">  <td>23/08/08 21:10:11</td>   <td>-5007</td> <td>&nbsp;</td><td title="&gt;&gt;DriverManager.initEnv()[pri:0, instance:tests.WelcomePage@74d1dc36]">&gt;&gt;initEnv</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
+<tr bgcolor="6163d6">  <td>23/08/08 21:36:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DriverManager.initEnv()[pri:0, instance:tests.WelcomePage@1ca3b418]">&gt;&gt;initEnv</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@438589491</td>   <td></td> </tr>
+<tr bgcolor="6163d6">  <td>23/08/08 21:36:48</td>   <td>4868</td> <td>&nbsp;</td><td title="&lt;&lt;DriverManager.closeEnv()[pri:0, instance:tests.WelcomePage@1ca3b418]">&lt;&lt;closeEnv</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@438589491</td>   <td></td> </tr>
+<tr bgcolor="9fe6c9">  <td>23/08/08 21:36:45</td>   <td>1874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WelcomePage.checkWrongCredentials()[pri:0, instance:tests.WelcomePage@1ca3b418]">checkWrongCredentials</td> 
+  <td>main@438589491</td>   <td></td> </tr>
 </table>
